; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_scsi_transport_iscsi.c_iscsi_if_ep_disconnect.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_scsi_transport_iscsi.c_iscsi_if_ep_disconnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iscsi_transport = type { i32 (%struct.iscsi_endpoint*)* }
%struct.iscsi_endpoint = type opaque
%struct.iscsi_cls_conn = type { i32, i32* }
%struct.iscsi_endpoint.0 = type { %struct.iscsi_cls_conn* }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iscsi_transport*, i32)* @iscsi_if_ep_disconnect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iscsi_if_ep_disconnect(%struct.iscsi_transport* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.iscsi_transport*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.iscsi_cls_conn*, align 8
  %7 = alloca %struct.iscsi_endpoint.0*, align 8
  store %struct.iscsi_transport* %0, %struct.iscsi_transport** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.iscsi_transport*, %struct.iscsi_transport** %4, align 8
  %9 = getelementptr inbounds %struct.iscsi_transport, %struct.iscsi_transport* %8, i32 0, i32 0
  %10 = load i32 (%struct.iscsi_endpoint*)*, i32 (%struct.iscsi_endpoint*)** %9, align 8
  %11 = icmp ne i32 (%struct.iscsi_endpoint*)* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %2
  %13 = load i32, i32* @EINVAL, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %3, align 4
  br label %45

15:                                               ; preds = %2
  %16 = load i32, i32* %5, align 4
  %17 = call %struct.iscsi_endpoint.0* @iscsi_lookup_endpoint(i32 %16)
  store %struct.iscsi_endpoint.0* %17, %struct.iscsi_endpoint.0** %7, align 8
  %18 = load %struct.iscsi_endpoint.0*, %struct.iscsi_endpoint.0** %7, align 8
  %19 = icmp ne %struct.iscsi_endpoint.0* %18, null
  br i1 %19, label %23, label %20

20:                                               ; preds = %15
  %21 = load i32, i32* @EINVAL, align 4
  %22 = sub nsw i32 0, %21
  store i32 %22, i32* %3, align 4
  br label %45

23:                                               ; preds = %15
  %24 = load %struct.iscsi_endpoint.0*, %struct.iscsi_endpoint.0** %7, align 8
  %25 = getelementptr inbounds %struct.iscsi_endpoint.0, %struct.iscsi_endpoint.0* %24, i32 0, i32 0
  %26 = load %struct.iscsi_cls_conn*, %struct.iscsi_cls_conn** %25, align 8
  store %struct.iscsi_cls_conn* %26, %struct.iscsi_cls_conn** %6, align 8
  %27 = load %struct.iscsi_cls_conn*, %struct.iscsi_cls_conn** %6, align 8
  %28 = icmp ne %struct.iscsi_cls_conn* %27, null
  br i1 %28, label %29, label %38

29:                                               ; preds = %23
  %30 = load %struct.iscsi_cls_conn*, %struct.iscsi_cls_conn** %6, align 8
  %31 = getelementptr inbounds %struct.iscsi_cls_conn, %struct.iscsi_cls_conn* %30, i32 0, i32 0
  %32 = call i32 @mutex_lock(i32* %31)
  %33 = load %struct.iscsi_cls_conn*, %struct.iscsi_cls_conn** %6, align 8
  %34 = getelementptr inbounds %struct.iscsi_cls_conn, %struct.iscsi_cls_conn* %33, i32 0, i32 1
  store i32* null, i32** %34, align 8
  %35 = load %struct.iscsi_cls_conn*, %struct.iscsi_cls_conn** %6, align 8
  %36 = getelementptr inbounds %struct.iscsi_cls_conn, %struct.iscsi_cls_conn* %35, i32 0, i32 0
  %37 = call i32 @mutex_unlock(i32* %36)
  br label %38

38:                                               ; preds = %29, %23
  %39 = load %struct.iscsi_transport*, %struct.iscsi_transport** %4, align 8
  %40 = getelementptr inbounds %struct.iscsi_transport, %struct.iscsi_transport* %39, i32 0, i32 0
  %41 = load i32 (%struct.iscsi_endpoint*)*, i32 (%struct.iscsi_endpoint*)** %40, align 8
  %42 = load %struct.iscsi_endpoint.0*, %struct.iscsi_endpoint.0** %7, align 8
  %43 = bitcast %struct.iscsi_endpoint.0* %42 to %struct.iscsi_endpoint*
  %44 = call i32 %41(%struct.iscsi_endpoint* %43)
  store i32 0, i32* %3, align 4
  br label %45

45:                                               ; preds = %38, %20, %12
  %46 = load i32, i32* %3, align 4
  ret i32 %46
}

declare dso_local %struct.iscsi_endpoint.0* @iscsi_lookup_endpoint(i32) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
